JDK9 support