@@ -3,6 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-parent</artifactId>
+        <version>26</version>
+        <relativePath/>
+    </parent>
     <groupId>org.jboss.resteasy</groupId>
     <artifactId>resteasy-spring-boot-starter-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -45,6 +51,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <modular.jdk.args/>
+        <modular.jdk.props/>
     </properties>
 
     <dependencies>
@@ -78,9 +86,30 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
+        <profile>
+	      <id>JDK9</id>
+	      <activation>
+	        <jdk>[9,)</jdk>
+	      </activation>
+	      <properties>
+	        <modular.jdk.args>
+	          --add-modules=java.se
+	        </modular.jdk.args>
+	        <modular.jdk.props>
+	          --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+	        </modular.jdk.props>
+	        <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
+	      </properties>
+	    </profile>
         <!-- Added for Fortify Support -->
         <profile>
             <id>fortify</id>
@@ -131,7 +160,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.20</version>
+                <configuration>
+                    <argLine>${modular.jdk.args} ${modular.jdk.props}</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <id>failsafe-integration-tests</id>
